[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Ochirtulga",email = "ochiroocho@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlmodel (>=0.0.22,<0.0.23)"
]

[tool.poetry]
packages = [{include = "backend", from = "app"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
